Fixed spacing between tables

--- a/src/index.css
+++ b/src/index.css
@@ -239,7 +239,7 @@ table tr:nth-child(even) {
   display: block;
   overflow-x: auto;
   width: 100%;
-  padding: 10px 0;
+  padding: 30px 0 0 0;
 }
 
 .article-container {
